# rrs

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: V0.md  V1.1.md  V1.2.md  V1.3.md  V1.4.md  V1.5.md  V1.md  V2.1.1.md  V2.1.md  V2.2.md  V2.3.md  V2.4.md  V2.5.md  V2.6.md  V2.md  V2_Design.md  V3.1.md  V3.2.md  V3.3.md  V3.4.md  V3.md  V4.1.md  V4.2.md  V4.3.md  V4.4.md  V4.5.md  V4.6.md  V4.7.md  V4.md  V5.md  V6.md  V7.md  V8.md
docs/design/: 二进制协议.md  分区算法.md  同步方案.md  玩家实体数据结构.md
docs/performance/: 性能优化路线.md  跨局压测资源残留问题复盘.md
include/rrs/app/: AppConfig.h
include/rrs/base/: Types.h
include/rrs/config/: ServerConfig.h
include/rrs/game/: FoodEntity.h  FoodSpatialIndex.h  MathTypes.h  PlayerEntity.h  PlayerInput.h  Room.h  RoomRules.h  RoomSnapshot.h
include/rrs/log/: Logger.h
include/rrs/metrics/: MetricsRegistry.h  MetricsReporter.h
include/rrs/net/: Acceptor.h  BinaryProtocol.h  IOThread.h  IoSessionRouter.h
include/rrs/runtime/: IoToWorkerMessage.h  Mailbox.h  RuntimeChannels.h  Session.h  SessionRegistry.h  WorkerRoomRegistry.h  WorkerThread.h  WorkerToIoMessage.h
include/rrs/spatial/: UniformGrid.h
perf/analysis/: 0720_2_2_1024_newfood.txt  20260710_4c4g_conn1024_io2_worker2.txt  20260712_4c4g_conn1024_io2_worker2_perf_report.txt  20260714_105056_io3_worker1.txt  20260720_2_2_newaoi_to_cellstamp.txt  20260720_4c4g_conn1024_io2_worker2.txt  20260722_房间级消息批处理线程配置对比.txt  aoi_linear_scan.txt  添加tick指标后.txt
scripts/: build.sh  make_flamegraph.sh
scripts/analysis/: analyze_room_tick_latency.py
scripts/local/: count_lines.sh  download_flamegraph.sh  download_log.sh
scripts/profiling/: make_flamegraph.sh
src/: main.cpp
src/app/: AppConfig.cpp  main.cpp
src/base/: Threading.cpp
src/config/: ServerConfig.cpp
src/game/: FoodSpatialIndex.cpp  Room.cpp  RoomSnapshot.cpp
src/log/: Logger.cpp
src/metrics/: MetricsRegistry.cpp  MetricsReporter.cpp
src/net/: Acceptor.cpp  BinaryProtocol.cpp  IOThread.cpp  IoSessionRouter.cpp
src/rrs/config/: ServerConfig.cpp  ServerConfig.h
src/rrs/core/: Identifiers.h  Mailbox.h  ThreadMessages.h  Threading.cpp  Threading.h
src/rrs/math/: Vector2.h
src/rrs/network/: Acceptor.cpp  Acceptor.h  IOThread.cpp  IOThread.h
src/rrs/observability/: Logger.cpp  Logger.h  MetricsRegistry.cpp  MetricsRegistry.h  MetricsReporter.cpp  MetricsReporter.h
src/rrs/protocol/: BinaryProtocol.cpp  BinaryProtocol.h
src/rrs/runtime/: ConnectionHandle.h  Mailbox.h  RoomManager.cpp  RoomManager.h  Session.h  SessionManager.cpp  SessionManager.h  SessionRegistry.cpp  SessionRegistry.h  WorkerChannels.cpp  WorkerChannels.h  WorkerManager.cpp  WorkerManager.h  WorkerMessages.h  WorkerRoomRegistry.cpp  WorkerRoomRegistry.h  WorkerThread.cpp  WorkerThread.h
src/rrs/simulation/: FoodEntity.h  PlayerEntity.h  PlayerVisibilityTracker.cpp  PlayerVisibilityTracker.h  Room.cpp  Room.h  RoomRules.h  RoomSnapshot.h  RoomVisibility.cpp  RoomVisibility.h
src/rrs/simulation/spatial/: FoodSpatialIndex.cpp  FoodSpatialIndex.h  PlayerBallSpatialIndex.cpp  PlayerBallSpatialIndex.h
src/rrs/spatial/: UniformGrid.cpp  UniformGrid.h  UniformGridAabbIndex.cpp  UniformGridAabbIndex.h  UniformGridPointIndex.cpp  UniformGridPointIndex.h
src/rrs/synchronization/: SnapshotDeltaTracker.cpp  SnapshotDeltaTracker.h  SnapshotQuantization.cpp  SnapshotQuantization.h  SnapshotUpdate.cpp  SnapshotUpdate.h
src/runtime/: IoToWorkerMessage.cpp  SessionRegistry.cpp  WorkerRoomRegistry.cpp  WorkerThread.cpp  WorkerToIoMessage.cpp
src/spatial/: UniformGrid.cpp
tests/: UniformGridTest.cpp
tests/protocol/: BinaryProtocolTest.cpp
tests/runtime/: SessionManagerTest.cpp  WorkerManagerTest.cpp
tests/simulation/: PlayerVisibilityTrackerTest.cpp  RoomFoodSynchronizationTest.cpp  RoomVisibilityTest.cpp
tests/simulation/spatial/: PlayerBallSpatialIndexTest.cpp
tests/spatial/: UniformGridTest.cpp
tests/synchronization/: SnapshotDeltaTrackerTest.cpp
